Fix the line-wrapping issue
Note: still can't get the css to style nice for both ascii art and plain
text. Need to think more about it.

--- a/static/main.css
+++ b/static/main.css
@@ -119,8 +119,8 @@ input[type=submit] {
 .post-content {
     position: relative;
     margin-top: 5px;
-    line-height: 70%;    
-    white-space: pre;
+    line-height: 100%;    
+    white-space: pre-wrap;
     font-family: monospace;
 }
 
